--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -156,6 +156,16 @@ $background-color:#eee;
 
 }
 
+.cart-button{
+    background: green;
+    color: #fff;
+    padding: 1.5rem 4rem;
+    border-radius: 1rem;
+    line-height: 1;
+    margin: 2rem 0;
+    cursor: pointer;
+}
+
 .footer{
     display: flex;
     flex-direction: column;
